@startuml

title __VEHICULOS's Class Diagram__\n

  namespace proyecto {
    namespace vehiculos {
      class proyecto.vehiculos.Camion {
          + Camion()
      }
    }
  }
  

  namespace proyecto {
    namespace vehiculos {
      class proyecto.vehiculos.Coche {
          + Coche()
      }
    }
  }
  

  namespace proyecto {
    namespace vehiculos {
      class proyecto.vehiculos.Moto {
          + Moto()
      }
    }
  }
  

  namespace proyecto {
    namespace vehiculos {
      abstract class proyecto.vehiculos.Vehiculo {
          # extraTime : int
          # goal : int
          # id : int
          # minimunRoad : ArrayList<Node>
          # name : String
          # origin : int
          # position : int
          # roadDistance : double
          # straightLineDistance : double
          {static} - LOGGER : Logger
          + Vehiculo()
          + create()
          + getExtraTime()
          + getId()
          + getName()
          + getOrigin()
          + getRoadDistance()
          + getStraightLineDistance()
          + run()
          + setOrigin()
          + setRoadDistance()
          + setStraightLineDistance()
          + updateData()
      }
    }
  }
  

  proyecto.vehiculos.Camion -up-|> proyecto.vehiculos.Vehiculo
  proyecto.vehiculos.Coche .up.|> java.lang.Runnable
  proyecto.vehiculos.Coche -up-|> proyecto.vehiculos.Vehiculo
  proyecto.vehiculos.Moto .up.|> java.lang.Runnable
  proyecto.vehiculos.Moto -up-|> proyecto.vehiculos.Vehiculo
  proyecto.vehiculos.Vehiculo .up.|> java.lang.Runnable
  proyecto.vehiculos.Vehiculo o-- proyecto.Graph : map
  proyecto.vehiculos.Vehiculo o-- proyecto.AStar : tree


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
